# ka9q_viterbi_comparison

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  RESULTS.md
.github/workflows/: x86-linux.yml  x86-windows.yml
ka9q_libfec_port/: parity.h  viterbi224_sse2.cpp  viterbi224_sse2.h  viterbi27_sse2.cpp  viterbi27_sse2.h  viterbi29_sse2.cpp  viterbi29_sse2.h  viterbi615_sse2.cpp  viterbi615_sse2.h
scripts/: plot_data.py  sample_loader.py  tabulate_data.py  util.py
spiral/: spiral27.cpp  spiral27.h  spiral29.cpp  spiral29.h  spiral47.cpp  spiral47.h  spiral49.cpp  spiral49.h  spiral615.cpp  spiral615.h
src/: bitcount.h  ka9q_interface.h  main.cpp  spiral_interface.h  tableless_avx_u8.h  util.h  viterbi_configs.h
tableless/: tableless_avx_u16.h  tableless_avx_u8.h  tableless_branch_value.h  tableless_config.h  tableless_sse_u16.h  tableless_sse_u8.h
